[gd_scene load_steps=22 format=3 uid="uid://dyksvrew4rbdy"]

[ext_resource type="Script" path="res://Frog.gd" id="1_mwgfi"]
[ext_resource type="Texture2D" uid="uid://ddvqcyeuu6cgx" path="res://assets/spritesheets/enemy-deadth.png" id="2_y3wg6"]
[ext_resource type="Texture2D" uid="uid://c3clrqr7jqi7t" path="res://assets/sprites/frog/idle/frog-idle-1.png" id="3_oixsr"]
[ext_resource type="Texture2D" uid="uid://db4sxxbmi5uk6" path="res://assets/sprites/frog/idle/frog-idle-2.png" id="4_smp1n"]
[ext_resource type="Texture2D" uid="uid://dwpjuirtblbq7" path="res://assets/sprites/frog/idle/frog-idle-3.png" id="5_s4m44"]
[ext_resource type="Texture2D" uid="uid://b8twd4u8flcic" path="res://assets/sprites/frog/idle/frog-idle-4.png" id="6_s0n4x"]
[ext_resource type="Texture2D" uid="uid://dmb6ha4hedw0l" path="res://assets/spritesheets/frog-jump.png" id="7_ghul7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3jahk"]
size = Vector2(22, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdgoi"]
atlas = ExtResource("2_y3wg6")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuwx0"]
atlas = ExtResource("2_y3wg6")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_0at1o"]
atlas = ExtResource("2_y3wg6")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rave"]
atlas = ExtResource("2_y3wg6")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwxm4"]
atlas = ExtResource("2_y3wg6")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud3d5"]
atlas = ExtResource("2_y3wg6")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_388wb"]
atlas = ExtResource("7_ghul7")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g5wq"]
atlas = ExtResource("7_ghul7")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wagux"]
atlas = ExtResource("7_ghul7")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_e4brp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdgoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuwx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0at1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rave")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwxm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud3d5")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_oixsr")
}, {
"duration": 1.0,
"texture": ExtResource("4_smp1n")
}, {
"duration": 1.0,
"texture": ExtResource("5_s4m44")
}, {
"duration": 1.0,
"texture": ExtResource("6_s0n4x")
}, {
"duration": 1.0,
"texture": ExtResource("3_oixsr")
}, {
"duration": 1.0,
"texture": ExtResource("3_oixsr")
}, {
"duration": 1.0,
"texture": ExtResource("3_oixsr")
}, {
"duration": 1.0,
"texture": ExtResource("3_oixsr")
}, {
"duration": 1.0,
"texture": ExtResource("3_oixsr")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_388wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g5wq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wagux")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_j46qo"]
radius = 138.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ysrbt"]
size = Vector2(19, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_otur7"]
size = Vector2(24, 14)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_mwgfi")

[node name="FrogCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_3jahk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_e4brp")
animation = &"Idle"

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_j46qo")
metadata/_edit_lock_ = true

[node name="FrogDeath" type="Area2D" parent="."]

[node name="FrogDeathCollisionShape" type="CollisionShape2D" parent="FrogDeath"]
position = Vector2(-1.5, -6)
shape = SubResource("RectangleShape2D_ysrbt")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_otur7")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="FrogDeath" to="." method="_on_frog_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
